--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,7 +38,8 @@ iframe#tela{
     position: relative;
     top: 0px;
     left: 7px;
-    height: 627px;
+    width: 300px;
+    height: 620px;
     border-radius: 42px;
     background-size: cover;
 }
